--- a/Implementation_of_Latent_Semantic_Analysis.ipynb
+++ b/Implementation_of_Latent_Semantic_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Implementation of Latent Semantic Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHcaqbaex26vEq7eu70GC4"
+      "authorship_tag": "ABX9TyM3IisDQ7pXiOd/xK6H2f4y"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,6 +22,17 @@
       "source": [
         "# Implementation of Latent Semantic Analysis (LSA)\n",
         "- [Reference](https://medium.com/analytics-vidhya/text-mining-101-a-stepwise-introduction-to-topic-modeling-using-latent-semantic-analysis-using-add9c905efd9)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i8Ebaa5FLPOq",
+        "colab_type": "text"
+      },
+      "source": [
+        "What is a topic model?\n",
+        "![topic model](https://miro.medium.com/max/1204/0*o4QTTXD7nHjsYQsK.png)"
       ]
     },
     {
