--- a/A_Chatbot_in_Python_using_nltk.ipynb
+++ b/A_Chatbot_in_Python_using_nltk.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "A Chatbot in Python using nltk.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNx2fpxVjo6hvPL4Qd0ySws"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNAiBmVxhXC/g1kIrrGujwk"
     },
     "kernelspec": {
       "name": "python3",
@@ -21,6 +22,16 @@
       },
       "source": [
         "[Reference](https://medium.com/swlh/a-chatbot-in-python-using-nltk-938a37a9eacc)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HzlUMksmPo0d",
+        "colab_type": "text"
+      },
+      "source": [
+        "![chatbot.png](https://miro.medium.com/max/1276/1*U1JHOjgrcqQPS9dRCjpWUw.png)"
       ]
     },
     {
@@ -42,7 +53,7 @@
         "os.chdir('gdrive/My Drive/Colab Notebooks')\n",
         "!pwd"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +90,7 @@
         "from nltk import word_tokenize # to create tokens\n",
         "from nltk.corpus import stopwords # for stop words"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +108,7 @@
         "df = pd.read_excel('dialog_talk_agent.xlsx')\n",
         "df.head(20)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +286,7 @@
       "source": [
         "df.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +312,7 @@
       "source": [
         "df.ffill(axis = 0,inplace=True)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -314,7 +325,7 @@
       "source": [
         "df1 = df.head(10)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,7 +342,7 @@
         "        p=re.sub(r'[^a-z0-9]',' ',a)\n",
         "        print(p)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,7 +359,7 @@
       "source": [
         "step1(df1['Context'])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +396,7 @@
         "words=word_tokenize(s)\n",
         "print(words)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +425,7 @@
         "nltk.download('wordnet')\n",
         "lemma.lemmatize('absorbed', pos = 'v')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +467,7 @@
         "nltk.download('averaged_perceptron_tagger')\n",
         "pos_tag(nltk.word_tokenize(s),tagset = None) # returns the parts of speech of every word"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +525,7 @@
         "    \n",
         "    return \" \".join(lema_words) # returns the lemmatized tokens as a sentence"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +542,7 @@
       "source": [
         "text_normalization('telling you some stuff about me')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +576,7 @@
         "df['lemmatized_text']=df['Context'].apply(text_normalization) # applying the fuction to the dataset to get clean text\n",
         "df.tail(15)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +745,7 @@
         "stop = stopwords.words('english')\n",
         "print(stop)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -768,7 +779,7 @@
         "cv = CountVectorizer() # intializing the count vectorizer\n",
         "X = cv.fit_transform(df['lemmatized_text']).toarray()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +800,7 @@
         "df_bow = pd.DataFrame(X, columns = features)\n",
         "df_bow.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1361,7 @@
       "source": [
         "Question ='Will you help me and tell me about yourself more'"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1370,7 +1381,7 @@
         "        Q.append(i)\n",
         "    b=\" \".join(Q)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1384,7 +1395,7 @@
         "Question_lemma = text_normalization(b) # applying the function that we created for text normalizing\n",
         "Question_bow = cv.transform([Question_lemma]).toarray() # applying bow\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1401,7 +1412,7 @@
       "source": [
         "Question_bow"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1456,7 +1467,7 @@
         "cosine_value = 1- pairwise_distances(df_bow, Question_bow, metric = 'cosine' )\n",
         "(cosine_value)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1488,7 +1499,7 @@
       "source": [
         "df['similarity_bow']=cosine_value"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1506,7 +1517,7 @@
         "df_simi = pd.DataFrame(df, columns=['Text Response','similarity_bow']) # taking similarity value of responses for the question we took\n",
         "df_simi"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1634,7 +1645,7 @@
         "df_simi_sort = df_simi.sort_values(by='similarity_bow', ascending=False) # sorting the values\n",
         "df_simi_sort.head()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1724,7 +1735,7 @@
         "df_threshold = df_simi_sort[df_simi_sort['similarity_bow'] > threshold] \n",
         "df_threshold"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2101,7 +2112,7 @@
         "index_value = cosine_value.argmax() # returns the index number of highest value\n",
         "index_value"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2131,7 +2142,7 @@
       "source": [
         "(Question)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2164,7 +2175,7 @@
       "source": [
         "df['Text Response'].loc[index_value] # The text at the above index becomes the response for the question"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2203,7 +2214,7 @@
       "source": [
         "Question1 ='Tell me about yourself.'"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2217,7 +2228,7 @@
         "tfidf=TfidfVectorizer() # intializing tf-id \n",
         "x_tfidf=tfidf.fit_transform(df['lemmatized_text']).toarray() # transforming the data into array"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2237,7 +2248,7 @@
         "df_tfidf=pd.DataFrame(x_tfidf,columns=tfidf.get_feature_names()) \n",
         "df_tfidf.head()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2799,7 +2810,7 @@
         "Question_lemma1 = text_normalization(Question1)\n",
         "Question_tfidf = tfidf.transform([Question_lemma1]).toarray() "
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2817,7 +2828,7 @@
         "cos=1-pairwise_distances(df_tfidf,Question_tfidf,metric='cosine')  # applying cosine similarity\n",
         "cos"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2855,7 +2866,7 @@
         "df_simi_tfidf = pd.DataFrame(df, columns=['Text Response','similarity_tfidf']) # taking similarity value of responses for the question we took\n",
         "df_simi_tfidf"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2983,7 +2994,7 @@
         "df_simi_tfidf_sort = df_simi_tfidf.sort_values(by='similarity_tfidf', ascending=False) # sorting the values\n",
         "df_simi_tfidf_sort.head(10)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3099,7 +3110,7 @@
         "df_threshold = df_simi_tfidf_sort[df_simi_tfidf_sort['similarity_tfidf'] > threshold] \n",
         "df_threshold"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3117,7 +3128,7 @@
         "index_value1 = cos.argmax() # returns the index number of highest value\n",
         "index_value1"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3147,7 +3158,7 @@
       "source": [
         "Question1"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3180,7 +3191,7 @@
       "source": [
         "df['Text Response'].loc[index_value1]  # returns the text at that index"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3229,7 +3240,7 @@
         "        lema_word.append(lema_token)\n",
         "    return \" \".join(lema_word)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3250,7 +3261,7 @@
         "    index_value=cosine_value.argmax() # getting index value \n",
         "    return df['Text Response'].loc[index_value]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3267,7 +3278,7 @@
       "source": [
         "chat_bow('hi there')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3300,7 +3311,7 @@
       "source": [
         "chat_bow('Your are amazing')"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3333,7 +3344,7 @@
       "source": [
         "chat_bow('i miss you')"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3367,7 +3378,7 @@
         "    index_value=cos.argmax() # getting index value \n",
         "    return df['Text Response'].loc[index_value]"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3384,7 +3395,7 @@
       "source": [
         "chat_tfidf('hi')"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3417,7 +3428,7 @@
       "source": [
         "chat_tfidf('how are you')"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3450,7 +3461,7 @@
       "source": [
         "chat_tfidf('i love you')"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3483,7 +3494,7 @@
       "source": [
         "chat_tfidf('I am Sangyun')"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3516,7 +3527,7 @@
       "source": [
         "chat_tfidf('thanks for your support!')"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3549,7 +3560,7 @@
       "source": [
         "chat_tfidf('will you reply accurately?')"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3582,7 +3593,7 @@
       "source": [
         "chat_tfidf('will you marry me?')"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3615,7 +3626,7 @@
       "source": [
         "chat_tfidf('i miss you and i love you')"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3648,7 +3659,7 @@
       "source": [
         "chat_tfidf('ask Sangyun to read')"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3681,7 +3692,7 @@
       "source": [
         "chat_tfidf('you are amazing and hope to see u soon.')"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
