--- a/Predict_Stock_Price_Movement_with_News_Headline_and_Sentiment_Analysis.ipynb
+++ b/Predict_Stock_Price_Movement_with_News_Headline_and_Sentiment_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Predict Stock Price Movement with News Headline and Sentiment Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZexxwwzEZXgC+HrSqpFuB"
+      "authorship_tag": "ABX9TyMONr9x5xHPoUSLkGeDB7oa"
     },
     "kernelspec": {
       "name": "python3",
@@ -154,6 +154,62 @@
         "\t\t\n",
         "if __name__ == '__main__':\n",
         "\tmain()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer as sia\n",
+        "test1 = \"I Love you..\"\n",
+        "print(sia().polarity_scores(test1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RJ_ODQbN21jy",
+        "outputId": "466f25b5-e78c-49c7-9aea-884c83a4f8e5"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'neg': 0.0, 'neu': 0.192, 'pos': 0.808, 'compound': 0.6369}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from nltk.sentiment.vader import SentimentIntensityAnalyzer as sia\n",
+        "test1 = \"I Love you..\"\n",
+        "print(test1, \"==>\",sia().polarity_scores(test1))\n",
+        "test2 = \"Sorry, I don't love you..\"\n",
+        "print(test2, \"==>\",sia().polarity_scores(test2))\n",
+        "test3 = \"Let us be friend..\"\n",
+        "print(test3, \"==>\",sia().polarity_scores(test3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IBGmYOol22Qs",
+        "outputId": "7a739c29-6533-4bfd-9f2f-b033dd90e467"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I Love you.. ==> {'neg': 0.0, 'neu': 0.192, 'pos': 0.808, 'compound': 0.6369}\n",
+            "Sorry, I don't love you.. ==> {'neg': 0.7, 'neu': 0.3, 'pos': 0.0, 'compound': -0.5673}\n",
+            "Let us be friend.. ==> {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n"
+          ]
+        }
       ]
     }
   ]
