--- a/Summarize_a_text_with_Python.ipynb
+++ b/Summarize_a_text_with_Python.ipynb
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "izVy4jmi1DOP",
-        "outputId": "8f779084-b75f-4efe-9cce-1f06b489c0df"
+        "outputId": "a6f2a460-2f2b-4e4f-bd18-7ec743843a8e"
       },
       "outputs": [
         {
@@ -43,9 +43,9 @@
             "Requirement already satisfied: nltk in /usr/local/lib/python3.7/dist-packages (3.7)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (1.21.6)\n",
             "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.7/dist-packages (from nltk) (2022.6.2)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from nltk) (7.1.2)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from nltk) (4.64.1)\n",
-            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from nltk) (1.2.0)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.7/dist-packages (from nltk) (7.1.2)\n"
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.7/dist-packages (from nltk) (1.2.0)\n"
           ]
         }
       ],
